# FastDriveLM

./: .gitignore  Makefile  README.md  doc.md  pyproject.toml  setup.py
configs/paligemma/: paligemma_drivelm_config.py
configs/phi4/: phi4_drivelm_1xb1-lora_config.py
configs/qwen3/: qwen3vl_drivelm-draft_1xb1-lora_config.py  qwen3vl_drivelm_1xb1-lora_config.py
custom_sd_vlm/: __init__.py  engine.py
scripts/: create_drivelm_nus.py  download_drivelm_nus.sh  run_50_sample_benchmark.sh  run_vllm_report.sh  summarize_metrics.py
spas_sage_attn/: pyproject.toml  setup.py  utils.py
spas_sage_attn/Triton_SpargeAttn/: triton_kernel_example.py
src/drivevlms/collate_fn/: __init__.py  drivelm_nus_qwen3.py
src/drivevlms/preparation/: __init__.py  qwen3_preparation.py
ssd/: config.py  paths.py  pyproject.toml
ssd/bench/: bench_paths.py
ssd/engine/: block_manager.py  draft_runner.py  llm_engine.py  model_runner.py  scheduler.py  speculator_async.py  step.py  verifier.py
ssd/engine/helpers/: cudagraph_helpers.py  runner_helpers.py
ssd/layers/: attention.py
ssd/models/: eagle3_draft_llama3.py  llama3.py  qwen3.py  qwen3_vision.py
ssd/scripts/: download_from_hf.py
ssd/ssd/: __init__.py  config.py  paths.py
ssd/ssd/engine/: draft_runner.py  llm_engine.py  model_runner.py  multimodal_parallel.py  multimodal_runner.py  sequence.py  speculator_async.py
ssd/ssd/engine/helpers/: runner_helpers.py
ssd/ssd/layers/: attention.py  sampler.py
ssd/ssd/models/: qwen3.py  qwen3_vision.py
ssd/ssd/utils/: loader.py  lora.py  misc.py
ssd/utils/: loader.py
tools/: ablation_ssd_vlm.py  compare_inference_speed.py  compare_quantized_inference.py  compare_speculative_decoding.py  evaluation.py  finetune.py  inference.py  inference_custom_sd_vlm.py  inference_sd_vlm_vllm.py  inference_ssd_vlm.py  inference_vllm.py  quantize_qwen3vl_awq.py  run_vllm_ablation.py
