[project]
name = "fastdrivelm"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"
authors = [
    { name = "rtae" }
]

dependencies = [
    "transformers>=4.52.0",
    "accelerate>=1.3.0",
    "soundfile==0.13.1",
    "pillow>=11.1.0",
    "scipy>=1.13.1",
    "torch>2.5.1",
    "torchvision>0.20.1",
    "backoff==2.2.1",
    "peft==0.15.1",
    "datasets>=4.8.5",
    "wandb>=0.27.0",
    "tensorboard>=2.20.0",
    "evaluate>=0.4.6",
    "rouge-score>=0.1.2",
    "nltk>=3.9.4",
    "pycocoevalcap>=1.2",
    "tiktoken>=0.13.0",
    "xxhash>=3.7.0",
    "einops>=0.8.0",
    "ninja>=1.13.0",
    "nvidia-cusparselt-cu12>=0.7.1",
    "vllm>=0.8.0",
    "flash-attn>=2.8.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
flash-attn = { url = "https://github.com/lesj0610/flash-attention/releases/download/v2.8.3-cu12-torch2.10-cp312/flash_attn-2.8.3+cu12torch2.10cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }