[project]
name = "fastdrivelm"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"
authors = [
    { name = "rtae" }
]

dependencies = [
    "transformers>=4.52.0",
    "accelerate>=1.3.0",
    "soundfile==0.13.1",
    "pillow>=11.1.0",
    "scipy>=1.13.1",
    "torch>2.5.1",
    "torchvision>0.20.1",
    "backoff==2.2.1",
    "peft==0.15.1",
    "datasets>=4.8.5",
    "wandb>=0.27.0",
    "tensorboard>=2.20.0",
    "evaluate>=0.4.6",
    "rouge-score>=0.1.2",
    "nltk>=3.9.4",
    "pycocoevalcap>=1.2",
    "tiktoken>=0.13.0",
    "xxhash>=3.7.0",
    "einops>=0.8.0",
    "ninja>=1.13.0",
    "nvidia-cusparselt-cu12>=0.7.1",
    "vllm>=0.8.0",
    "arctic-inference>=0.1.2",
]

[project.optional-dependencies]
sparse-attn = [
    "spas-sage-attn",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
spas-sage-attn = { path = "spas_sage_attn", editable = true }

[tool.uv.extra-build-dependencies]
fastdrivelm = ["torch", "ninja"]
spas-sage-attn = ["torch", "ninja"]
